# word-whacker

./: CMakeLists.txt  LICENSE  README.md  gui.qrc
docs/: index.html  wordwhacker.html  wordwhacker.js
gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
gui/stylesheets/: dark_default.qss
include/: Document.hpp
src/: Document.cpp  main.cpp
